--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <div class="header">
     <span>email</span>
-    <span routerLink="/about">mobile</span>
+    <span> <img src="assets/phone-call.png" alt="phone"> mobile</span>
 </div>
