--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,49 @@
-<div class="header">
-    <span>email</span>
-    <span routerLink="/about">mobile</span>
+<div class="pri_header">
+  <span (click)="sendEmail()">
+    <i class="fa-regular fa fa-envelope"></i> email
+  </span>
+  <span (click)="copyMobile()">
+    <i class="fa-solid fa fa-phone"></i> mobile {{ mobileNumber }}
+  </span>
 </div>
+<header class="sec_header">
+  <div class="logo">
+    <img src="assets/logo2.png" alt="Logo" />
+  </div>
+  <nav class="nav-links">
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">About</a></li>
+      <li class="dropdown">
+        <a href="#">Services <i class="fa fa-caret-down"></i></a>
+
+        <ul class="dropdown-content">
+          <li><a href="#">Service 1</a></li>
+          <li><a href="#">Service 2</a></li>
+          <li><a href="#">Service 3</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Portfolio</a></li>
+      <li class="dropdown">
+        <a href="#">Technology <i class="fa fa-caret-down"></i></a>
+
+        <ul class="dropdown-content">
+          <li><a href="#">Service 1</a></li>
+          <li><a href="#">Service 2</a></li>
+          <li><a href="#">Service 3</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Blog</a></li>
+      <li class="dropdown">
+        <a href="#">Company <i class="fa fa-caret-down"></i></a>
+
+        <ul class="dropdown-content">
+          <li><a href="#">Service 1</a></li>
+          <li><a href="#">Service 2</a></li>
+          <li><a href="#">Service 3</a></li>
+        </ul>
+      </li>
+      <li><a href="#">Contact Us</a></li>
+    </ul>
+  </nav>
+</header>
