--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,14 +1,94 @@
-.header{
-    background-color: rgb(30, 30, 123);
-    
+.pri_header {
+  background-color: rgb(30, 30, 123);
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 8%;
+  height: 40px;
+  font-size: 20px;
+
+  span {
+    display: flex;
+    color: white;
+    cursor: pointer;
+    justify-content: center;
+    align-items: center;
+    i {
+      padding: 0 5px;
+    }
+  }
+}
+
+.sec_header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0  8%;
-    height: 40px;
-    font-size: 20px;
-}
-span{
+    padding: 0 8%;
+    background-color: white; /* Change to your desired background color */
+    .logo{
+        width: 200px;
+    height: 100px;
     display: flex;
-    color: white;
+    align-items: center;
+         img {
+      width: 200px;
+      height: auto;
+    }
 }
+.nav-links{
+    font-size: 20px;
+    ul{
+        color: black;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        li{
+            color: black;
+            margin-right: 20px;
+            &:last-child{
+                margin-right: 0;
+            }
+        }
+        
+        .dropdown {
+          position: relative;
+          display: inline-block;
+          &:hover{
+            .dropdown-content {
+                display: block;
+              }
+          }
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #fff; /* Change to your desired background color */
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+    li {
+        padding: 10px;
+      }
+  }
+        }
+    }
+}
+  }
+  
+  /* Style the dropdown arrow icon */
+  .fa-caret-down {
+    margin-left: 5px;
+  }
+  
+  /* Style the navigation links */
+  .nav-links a {
+    text-decoration: none;
+    color: #050505; /* Change to your desired link color */
+  }
+  
+  .nav-links a:hover {
+    text-decoration: underline;
+  }
+  
