--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,11 @@
-<p>home works!</p>
+<section class="hero-section">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-8 offset-md-2">
+          <h1 class="display-4">Your Trusted Partner in Website Development</h1>
+          <p class="lead">Crafting stunning websites that leave a lasting impression. Explore our portfolio of successful projects and let us bring your vision to life.</p>
+          <a href="#portfolio" class="btn btn-primary btn-lg">View Portfolio</a>
+        </div>
+      </div>
+    </div>
+  </section>
