--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,16 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~bootstrap/dist/css/bootstrap.min.css';
+
 * { margin: 0; padding: 0; }
+h1, h2, h3, h4, h5, h6 {
+    color: #ffffff;
+}
+a, a:hover, a:focus, a:active {
+    text-decoration: none;
+    outline: none;
+}
+ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
