--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,13 +17,16 @@
 
   <div class="header-main">
       <div class="container">
-          <nav id='cssmenu'>
               <div class="logo">
-                  <a><img src="assets/logo2.png"></a>
+                  <img src="assets/logo2.png">
               </div>
-              <div id="head-mobile"></div>
-              <div class="button"></div>
-              <ul>
+              
+      </div>
+  </div>
+</header>
+
+<!-- 
+    <ul>
                   <li class='active'><a>Home</a></li>
                   <li><a>About Us</a></li>
                   <li><a>Services</a>
@@ -62,9 +65,6 @@
                         <li><a>Who We Serve</a></li>
                     </ul>
                 </li>
-                  <li><a>Contact Us</a></li>
+                  <li><a class="contact_us">Contact Us</a></li>
               </ul>
-          </nav>
-      </div>
-  </div>
-</header>
+ -->
