--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,11 +1,19 @@
-<section class="hero-section">
+<!-- <section class="hero-section">
     <div class="container">
       <div class="row">
-        <div class="col-md-8 offset-md-2">
-          <h1 class="display-4">Your Trusted Partner in Website Development</h1>
-          <p class="lead">Crafting stunning websites that leave a lasting impression. Explore our portfolio of successful projects and let us bring your vision to life.</p>
-          <a href="#portfolio" class="btn btn-primary btn-lg">View Portfolio</a>
+        <div class="col-md-8 offset-md-2 d-flex flex-direction-column">
+          <h1 class="display-4">Empowering Your Digital Presence</h1>
+          <p class="lead">Crafting innovative web solutions to elevate your brand. Join us on the journey of transforming ideas into captivating online experiences. Let's build your digital success story together.</p>
+          <a href="#portfolio" class="btn btn-primary btn-lg">Speak With Our Experts</a>
         </div>
       </div>
+    </div>
+  </section> -->
+  <section class="hero">
+    <div class="overlay">
+        <div class="content">
+          <h1>Empowering Your <br>Digital Presence.</h1>
+          <p>Crafting innovative web solutions to elevate your brand. Join us on the journey of transforming ideas into captivating online experiences. Let's build your digital success story together.</p>
+        </div>
     </div>
   </section>
