--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,7 +20,49 @@
               <div class="logo">
                   <img src="assets/logo2.png">
               </div>
-              
+              <nav id="cssmenu">
+              <ul>
+                <li class='active'><a>Home</a></li>
+                <li><a>About Us</a></li>
+                <li><a>Services</a>
+                    <ul>
+                        <li><a>Services 1</a></li>
+                        <li><a>Services 2</a>
+                            <ul>
+                                <li><a>Services 21</a></li>
+                            </ul>
+                        </li>
+
+                        <li><a>Services 3</a></li>
+                        <li><a>Services 4</a></li>
+                    </ul>
+                </li>
+                <li><a>Portfolio</a></li>
+                <li><a>Technologies</a>
+                  <ul>
+                      <li><a>Services 1</a></li>
+                      <li><a>Services 2</a>
+                          <ul>
+                              <li><a>Services 21</a></li>
+                          </ul>
+                      </li>
+
+                      <li><a>Services 3</a></li>
+                      <li><a>Services 4</a></li>
+                  </ul>
+              </li>
+                <li><a>Blog</a></li>
+                <li><a>Company</a>
+                  <ul>
+                      <li><a>FAQs</a></li>
+                      <li><a>Testimonials</a></li>
+                      <li><a>Refer a Friend</a></li>
+                      <li><a>Who We Serve</a></li>
+                  </ul>
+              </li>
+                <li><a class="contact_us">Contact Us</a></li>
+            </ul>
+        </nav>
       </div>
   </div>
 </header>
