--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -27,11 +27,12 @@
          font-size: 90px;
          line-height: 0.9;
          margin-bottom: 0px;
-         color: white;
+         color: rgb(0, 0, 0);
        }
        p {
+        margin-top: 10px;
          font-size: 24px;
-         color: white;
+         color: rgb(49, 0, 0);
        }
      }
      &:before {
