--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -18,7 +18,7 @@
   <div class="header-main">
       <div class="container">
               <div class="logo">
-                  <img src="assets/logo2.png">
+                  <img src="assets/final logo.png">
               </div>
               <nav id="cssmenu">
               <ul>
