--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -12,7 +12,7 @@
        top:0;
        left:0;
        right: 0;
-      // background: rgb(19,58,83);
+      background: rgba(240, 248, 255, 0.5490196078);
       // background: linear-gradient(220deg, rgba(19,58,83,0.85) 0%, rgba(208,97,40,0.85) 100%);
      .content {
          display: flex;
