--- a/src/app/components/contact-us/contact-us.component.html
+++ b/src/app/components/contact-us/contact-us.component.html
@@ -1,15 +1,22 @@
 <div class="contact-section">
-  <div class="left_contact">
-    <div class="contact_box">
-      <div class="contact_image">
-        <img src="assets\phone-call.png" alt="" />
+  <div class="map">
+    <iframe
+      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3589.721397926078!2d83.64059941112524!3d25.878645403667953!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39921f8845945759%3A0x472d697fdeb94041!2sBahadurganj%20Bus%20Stand!5e0!3m2!1sen!2sin!4v1701243709074!5m2!1sen!2sin"
+      width="600" height="450" style="border: 0" allowfullscreen="" loading="lazy"
+      referrerpolicy="no-referrer-when-downgrade"></iframe>
+  </div>
+  <div class="contacts">
+    <div class="left_contact">
+      <div class="contact_box">
+        <div class="contact_image">
+          <img src="assets\phone-call.png" alt="" />
+        </div>
+        <div class="contact_data">
+          <span>Phone Number</span>
+          <span>040404040404</span>
+        </div>
       </div>
-      <div class="contact_data">
-        <span>Phone Number</span>
-        <span>040404040404</span>
-      </div>
-    </div>
-    <div class="contact_box">
+      <div class="contact_box">
         <div class="contact_image">
           <img src="assets\email.png" alt="" />
         </div>
@@ -36,61 +43,52 @@
           <span>Delhi</span>
         </div>
       </div>
-  </div>
-  <div class="right_contact">
-    <form id="form-sec">
-      <div class="title">
-        <h2>Send Message</h2>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
-          maiores.
-        </p>
-      </div>
-      <!-- Your Name -->
+    </div>
+    <div class="right_contact">
+      <form id="form-sec">
+        <div class="title">
+          <h2>Send Message</h2>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti,
+            maiores.
+          </p>
+        </div>
+        <!-- Your Name -->
 
-      <div class="input-group">
-        <label for=""></label>
-        <input type="text" placeholder="Your Name" id="name" name="name" />
-      </div>
+        <div class="input-group">
+          <label for=""></label>
+          <input type="text" placeholder="Your Name" id="name" name="name" />
+        </div>
 
-      <!-- Email Address -->
+        <!-- Email Address -->
 
-      <div class="input-group">
-        <label for=""></label>
-        <input type="text" placeholder="Enter Email" id="email" name="email" />
-      </div>
+        <div class="input-group">
+          <label for=""></label>
+          <input type="text" placeholder="Enter Email" id="email" name="email" />
+        </div>
 
-      <!-- Phone Number -->
+        <!-- Phone Number -->
 
-      <div class="input-group">
-        <label for=""></label>
-        <input type="text" placeholder="9020201020" id="Phone" name="phone" />
-      </div>
+        <div class="input-group">
+          <label for=""></label>
+          <input type="text" placeholder="9020201020" id="Phone" name="phone" />
+        </div>
 
-      <!-- Subject -->
+        <!-- Subject -->
 
-      <div class="input-group">
-        <label for=""></label>
-        <input
-          type="text"
-          placeholder="Enter Subject"
-          id="Subject"
-          name="Subject"
-        />
-      </div>
+        <div class="input-group">
+          <label for=""></label>
+          <input type="text" placeholder="Enter Subject" id="Subject" name="Subject" />
+        </div>
 
-      <!-- Message -->
+        <!-- Message -->
 
-      <div class="input-group">
-        <label for=""></label>
-        <input
-          type="message"
-          placeholder="Message"
-          id="Message"
-          name="Message"
-        />
-      </div>
-      <button class="btn">Send Message</button>
-    </form>
+        <div class="input-group">
+          <label for=""></label>
+          <input type="message" placeholder="Message" id="Message" name="Message" />
+        </div>
+        <button class="btn">Send Message</button>
+      </form>
+    </div>
   </div>
 </div>
